--- a/templates/index.html
+++ b/templates/index.html
@@ -23,22 +23,9 @@
                 <input type="text" name="full-name" placeholder="Full Name">
                 <label for="department">Choose department: </label>
                 <select id="department" name="department">
-                    <option value="QEDI Biochemistry">QEDI Biochemistry</option>
-                    <option value="QEDI Haematology">QEDI Haematology</option>
-                    <option value="QEDI Urinalysis">QEDI Urinalysis</option>
-                    <option value="QEDI Immunology & Biomarkers">QEDI Immunology & Biomarkers</option>
-                    <option value="QEDI Molecular">QEDI Molecular</option>
-                    <option value="QEDI Microbiology">QEDI Microbiology</option>
-                    <option value="QEDI Flow Cytometry">QEDI Flow Cytometry</option>
-                    <option value="QEDI PBMC">QEDI PBMC</option>
-                    <option value="QEDI Anatomic Pathology">QEDI Anatomic Pathology</option>
-                    <option value="Tech Services">Tech Services</option>
-                    <option value="QA">QA</option>
+                    <option value="Finance">Finance</option>
+                    <option value="HR">HR</option>
                     <option value="IT">IT</option>
-                    <option value="CTM">CTM</option>
-                    <option value="Lab Ops">Lab Ops</option>
-                    <option value="Spec Man">Spec Man</option>
-                    <option value="TILO">TILO</option>
                 </select>
                 <input type="submit">
             </form>
